namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radcliffe
  labels:
    name: radcliffe
    app.kubernetes.io/part-of: radcliffe
